--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "informational website",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,10 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/node": "18.15.11",
+    "@types/react": "18.0.34",
+    "@types/react-dom": "18.0.11",
+    "autoprefixer": "10.4.14",
+    "eslint": "8.38.0",
+    "eslint-config-next": "13.3.0",
+    "next": "13.3.0",
+    "postcss": "8.4.21",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.3.1",
+    "typescript": "5.0.4",
     "bootstrap": "^4.6.0",
-    "next": "^10.2.0",
-    "react": "^17.0.2",
-    "react-bootstrap": "^1.5.2",
-    "react-dom": "^17.0.2"
+    "react-bootstrap": "^1.5.2"
   }
 }
