--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,10 @@ services:
   web:
     build:
       context: ./
-      target: runner
+      target: deps
     volumes:
       - .:/app
-    command: npm run dev
+    command: sh -c "npm run dev"
     ports:
       - "8080:8080"
     environment:
